--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "xing-ui-1-1",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "这是一个基于VUE的UI框架",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
