--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "这是一个基于VUE的UI框架",
   "main": "dist/index.js",
   "scripts": {
+    "start": "npx parcel build index.js --no-cache --no-minify",
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
   },
