--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.2.0",
+    "babel-core": "^6.26.3",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
     "karma": "^5.2.3",
