--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/wuyangqin/xing-ui#readme",
   "dependencies": {
+    "highlight.js": "^10.5.0",
     "vue": "^2.6.12",
     "vue-hot-reload-api": "^2.3.4"
   },
