--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "这是一个基于VUE的UI框架",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "npx parcel --no-cache index.html",
-    "start": "npx parcel build index.js --no-cache --no-minify",
-    "dev-test": "parcel watch test/* --no-cache & karma start",
-    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run",
+    "dev": "vue-cli-service serve",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test": "karma start --single-run",
+    "test:unit": "karma start",
+    "test:unit:old": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
@@ -27,34 +30,39 @@
   "homepage": "https://github.com/wuyangqin/xing-ui#readme",
   "dependencies": {
     "highlight.js": "^10.5.0",
-    "vue": "^2.6.12",
-    "vue-hot-reload-api": "^2.3.4"
+    "jsdom": "^16.5.2",
+    "vue": "^2.5.17"
   },
   "devDependencies": {
-    "@vue/component-compiler-utils": "^3.2.0",
+    "@vue/cli-plugin-babel": "^3.0.0",
+    "@vue/cli-plugin-unit-mocha": "^3.0.0",
+    "@vue/cli-service": "^3.0.0",
+    "@vue/test-utils": "^1.0.0-beta.24",
+    "babel-plugin-istanbul": "^5.1.0",
     "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "chai": "^4.2.0",
+    "cross-env": "^5.2.0",
+    "chai": "^4.1.2",
     "chai-spies": "^1.0.0",
-    "karma": "^5.2.3",
-    "karma-chai": "^0.1.0",
-    "karma-chai-spies": "^0.1.4",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-mocha": "^2.0.1",
-    "karma-sinon-chai": "^2.0.2",
-    "less": "^3.13.1",
-    "less-loader": "^7.3.0",
-    "mocha": "^8.2.1",
-    "parcel-bundler": "^1.12.4",
-    "sinon": "^9.2.1",
-    "sinon-chai": "^3.5.0",
-    "vue-template-compiler": "^2.6.12",
+    "karma": "^3.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "^0.0.32",
+    "karma-webpack": "^3.0.0",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
+    "mocha": "^5.2.0",
+    "sinon": "^6.1.5",
+    "sinon-chai": "^3.2.0",
+    "vue-template-compiler": "^2.5.17",
     "vuepress": "^1.8.0"
   },
-  "alias": {
-    "vue": "./node_modules/vue/dist/vue.common.js"
-  }
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
