--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@vue/cli-plugin-babel": "^3.0.0",
     "@vue/cli-plugin-unit-mocha": "^3.0.0",
     "@vue/cli-service": "^3.0.0",
-    "@vue/test-utils": "^1.0.0-beta.24",
+    "@vue/test-utils": "^1.0.0",
     "babel-plugin-istanbul": "^5.1.0",
     "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
