--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "xing-ui-1-1",
-  "version": "0.0.2",
+  "name": "xing-ui",
+  "version": "0.0.5",
   "description": "这是一个基于VUE的UI框架",
-  "main": "dist/index.js",
+  "main": "dist/xing.umd.min.js",
   "scripts": {
     "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --target lib --name xing src/index.js",
     "test": "karma start --single-run",
     "test:unit": "karma start",
     "test:unit:old": "vue-cli-service test:unit",
