--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "plugins": ["transform-vue-jsx"]
+  "plugins": ["transform-vue-jsx"],
+  "presets": [["@babel/env", { "modules": false }]],
+  "env": {
+    "test": {
+      "plugins": ["istanbul"]
+    }
+  }
 }
