--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target lib --name xing src/index.js",
-    "test": "karma start --single-run",
-    "test:unit": "karma start",
+    "test": "cross-env NODE_ENV=test karma start --single-run",
+    "test:unit": "cross-env NODE_ENV=test karma start",
     "test:unit:old": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "docs:dev": "vuepress dev docs",
@@ -38,17 +38,19 @@
     "@vue/cli-plugin-unit-mocha": "^3.0.0",
     "@vue/cli-service": "^3.0.0",
     "@vue/test-utils": "^1.0.0",
-    "babel-plugin-istanbul": "^5.1.0",
     "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-plugin-istanbul": "^5.1.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "cross-env": "^5.2.0",
     "chai": "^4.1.2",
     "chai-spies": "^1.0.0",
+    "cross-env": "^5.2.0",
     "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
+    "karma-source-map-support": "^1.4.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.32",
     "karma-webpack": "^3.0.0",
